Safari365 Prod/src/objects/Field_Mapping_For_Rate_Calculation__mdt.object
<CustomObject>
    <description>This setting is used to set the cross fields which are used during the Rate Calculation</description>
    <fields>
        <fullName>FieldSet_Name__c</fullName>
        <label>FieldSet Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Field__c</fullName>
        <label>Source Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Object__c</fullName>
        <label>Source Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Field__c</fullName>
        <label>Target Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Object__c</fullName>
        <label>Target Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Field Mapping For Rate Calculation</label>
    <listViews>
        <fullName>OPT_c</fullName>
        <columns>Source_Object__c</columns>
        <columns>Target_Field__c</columns>
        <columns>Target_Object__c</columns>
        <columns>Source_Field__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source_Object__c</field>
            <operation>equals</operation>
            <value>OPT__c</value>
        </filters>
        <label>OPT__c</label>
    </listViews>
    <pluralLabel>Field Mapping For Rate Calculations</pluralLabel>
</CustomObject>